<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--  statusbar strings -->
	<string name="app_name">Studassen</string>
	<!-- Home strings -->
	<string name="header_timetable">Lectures today:</string>
	<string name="no_lectures">None</string>

	<!-- MenuActivity strings -->
	<string name="btn_courses">NTNU Courses</string>
	<string name="btn_timetable">Timetable</string>
	<string name="btn_dinner">Dinner</string>
	<string name="btn_bus">Bus</string>
	<string name="btn_social">Social events</string>

	<!-- CourseMenu strings -->
	<string name="tab_timetable">Timetable</string>
	<string name="tab_my_courses">My courses</string>
	<string name="tab_find_courses">Find courses</string>
	<string name="courses_page">/Course</string>

	<!-- CourseSearchActivity strings -->
	<string name="tv_search_course">Search for courses</string>
	<string name="fetching_courses">Loading course..</string>
	<string name="ac_find_course_hint">Course code or name</string>

	<string name="dialog_title_pick_color">Pick a color for the course</string>
	<string name="btn_clear_course_search">Clear</string>


	<!-- CourseActivity strings -->
	<string name="toast_course_added">Course saved to my courses</string>
	<string name="toast_course_add_failed">Unable to save course :(</string>
	<string name="toast_course_remove_failed">Unable to remove course :(</string>
	<string name="toast_course_removed">Course successfully removed</string>
	<string name="course_type">Course type: </string>
	<string name="student_points">Course credit: </string>
	<string name="taught_in_semester_spring">Taught in spring</string>
	<string name="taught_in_semester_autumn">Taught in autumn</string>
	<string name="et_course_id">Course code</string>
	<string name="download_failed_toast">Download failed. Make sure you have a working
		Internet connection, and try again.</string>
	<string name="invalid_url_toast">Download failed: Could not find course (web server
		might be down)</string>
	<string name="course_goals">Course Goals</string>
	<string name="course_description">Description</string>
	<string name="room">Room: </string>
	<string name="tv_course_schedule_header">Timetable</string>
	<string name="taught_in_weeks">Taught in week</string>
	<string name="btn_add_my_courses">Add to my courses</string>
	<string name="btn_remove_my_course">Remove from my courses</string>

	<!--  SocialActivity Strings -->
	<string name="tv_social_title">Events</string>
	<string name="btn_open_link">Open link</string>
	<string name="event_content_by">Event info retrieved from:</string>
	<string name="category">Category:</string>

	<!-- DinnerActivity strings -->
	<string name="text_select_place">Choose canteen</string>
	<string name="todays_dinner">Todays dinner</string>

	<!-- Waiting messages -->
	<string name="downloading_content">Downloading content..</string>

	<!--  Timetable strings -->
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="timetable">Timetable</string>
	<string name="course_code">Course code</string>
	<string name="my_courses">My courses</string>
	<string name="week_header">Timetable Week</string>


	<!-- Database -->
	<string name="databaseVersion">1</string>

	<!-- error message -->
	<string name="error_msg_header">Connection failed</string>
	<string name="error_msg_text">Make sure you have a working Internet connection,
		and try again.</string>
	<string name="settings">Settings</string>
	<string name="cancel">Cancel</string>
</resources>
